--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1019,7 +1019,7 @@ button:disabled,
 .active-proza {
   color: #2e8dad !important;
 }
-.active-vers {
+.active-lira {
   color: #2e8dad !important;
 }
 
